--- a/assets/css/Oxair.css
+++ b/assets/css/Oxair.css
@@ -1,3 +1,10 @@
 #menu-toggle:checked + #menu {
-    display: block;
-  }
+  display: block;
+  position: absolute;
+  top: 4rem; /* Adjust based on your header height */
+  left: 0;
+  width: 100%;
+  background-color: white;
+  z-index: 50;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
