--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -178,12 +178,59 @@ ul.our-market-tabs {
     margin: 0 auto 20px;
   }
 }
+.footer {
+  padding: 40px 0;
+}
+.footer-content{
+
+  h6{
+    font: normal normal 600 17px Open Sans;
+    margin-bottom: 20px;
+  }
+  address{
+    font: normal normal normal 14px/20px Open Sans;
+    color: #888888;
+  }
+}
+
+.list-unstyled {
+  padding-left: 0;
+  list-style: none;
+  li + li{
+    border-left: 1px solid #888;
+  }
+  li{
+    padding: 0px 8px;
+    float: left;
+    line-height: 13px;
+    margin-bottom: 10px;
+  }
+  
+    a{
+      font-size: 14px;
+      color: #888888;
+      text-decoration: none;
+    }
+  }
 .contact-text {
   color: #4caf50;
   font-size: 18px;
 }
 .border-r{
   border-right: 1px solid #2BDAFA;
+}
+.copy-rights{
+  font-size: 12px;
+  color: #888888;
+  margin: 0;
+}
+.social-icons{
+  display: inline-block;
+  margin-top: 15px;
+  a{
+    margin: 0 5px;
+    display: inline-block;
+  }
 }
 /*container*/
 .container{
