--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -260,3 +260,22 @@ ul.our-market-tabs {
   width: 75%;
  }
 }
+.vertical-line {
+  border-left: 2px solid rgba(0, 0, 0, 0.5);
+  height: 100%;
+  margin: 0 auto;
+}
+.icon-size {
+  width: 40px;
+  height: 40px; 
+}
+
+.font-gas {
+  font-weight: 700;
+  font-size: 36px;
+}
+
+.font-gas2{
+  font-weight: 700;
+  font-size: 24px;
+}
