--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -245,6 +245,123 @@ ul.our-market-tabs {
   }
 
 }
+.the-oxair-india{
+  margin: 50px 0;
+}
+.defference-sec{
+   ul {
+  display: flex;
+  padding-left: 20px;
+  li {
+    margin: 0 17px;
+    font: normal normal bold 20px Open Sans;
+    color: #20205E;
+    &:first-child {
+margin-left: 0;
+    }
+  }
+}
+}
+.technology-section{
+  background: var(--unnamed-color-20205e) 0% 0% no-repeat padding-box;
+background: #20205E 0% 0% no-repeat padding-box;
+border-radius: 20px;
+}
+.our-technology-tabs {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-around;
+  border-bottom: none;
+
+  li {
+    width: 30%;
+
+    button.nav-link {
+      text-align: left;
+      color: #39D000;
+      border: none;
+      border-bottom:5px solid #39D000 ;
+      height: 120px;
+      line-height: 20px;
+      span {
+        img {
+          display: block;
+        }
+      }
+    }
+
+    button.nav-link.active {
+      background-color: transparent !important;
+      border: none;
+      color: #fff;
+      border-bottom:5px solid #ffffff ;
+    }
+  }
+}
+/*Worlwide Installations*/
+.installation-count{
+  h2{
+    font: normal normal bold 40px/50px Open Sans;
+    letter-spacing: 0px;
+    color: #39D000;
+  }
+  p{
+    font: normal normal normal 20px/25px Open Sans;
+    letter-spacing: 0px;
+    color: #888888;
+    text-transform: uppercase;
+  }
+}
+
+/*Testimonial Section*/
+.testimonial-section{
+  display: inline-block;
+  margin-bottom: 50px;
+.section-heading{
+  font: normal normal 600 1.8vw/2.5vw Open Sans;
+  color: #2BDAFA;
+  margin-bottom: 0;
+}
+.section-sub-heading{
+  font: normal normal 600 1.8vw/2.5vw Open Sans;
+  color: #20205E;
+  margin-bottom: 20px;
+}
+  .carousel{
+    .carousel-indicators{
+      display: none;
+    }
+  }
+}
+.author-sec {
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  .autor-details{
+margin-left: 20px;
+    h6{
+      margin: 0;
+      color: #20205E;
+      font: normal normal 600 16px Open Sans;
+    }
+    small{
+      color: #888888;
+      font: normal normal 14px/18px Open Sans;
+      display: block;
+    }
+  }
+}
+.testimonial{
+  p{
+    font: italic normal normal 14px/24px Open Sans;
+    color: #888888;
+  }
+}
+
+
+/* .nav-tabs .nav-link.active{
+  background-color: transparent;
+} */
 /*container*/
 .container{
   max-width: 100%;
