--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -260,3 +260,106 @@ ul.our-market-tabs {
   width: 75%;
  }
 }
+
+/* styles/Home.module.css */
+ 
+.product-heading1{
+  font: normal normal bold 18px/24px Open Sans;
+  text-align: left;
+}
+.font-oxy{
+  font:normal normal bold 18px Open Sans;
+  color:#888888 ;
+}
+.oxy-smallfont{
+  font:normal normal bold 1vw/18px Open Sans;
+  color:#888888 ;
+}
+ 
+.knownmorebt{
+background-color: #39D000;
+
+}
+
+.product-heading{
+  font: 16px/24px Open Sans #888888;
+  text-align: justify;
+}
+.icon-text-box {
+  display: flex;
+  align-items: center;
+padding-left: 10px;}
+.icon-text-box img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+}
+.thumanails{
+  display: flex;
+  padding: 4px;
+  margin-top: 12px;
+
+}
+ 
+
+.img-border{
+  border-right:0.5px solid;
+}
+@media (max-width: 767.98px) { /* Adjust the max-width value as needed for your breakpoints */
+  .img-border {
+      border-right: none;
+  }
+}
+
+.item {
+  font-weight: bold;
+    cursor: pointer;
+    padding: 10px;
+    margin: -8px; 
+    text-align: center;
+    transition: background-color 0.3s;
+    font-size: 14px;
+    color: #888;
+   
+}
+
+ 
+
+.Ohpalign {
+  text-align: justify;
+}
+ 
+
+ 
+.bordercolor{
+   border-bottom: 8px solid #CCCCCC;
+  
+}
+.activetop{
+  border-bottom: 8px solid #2BDAFA ;
+  cursor: pointer;
+  color:#2BDAFA  ;
+  transition: background-color 0.3s;
+  
+  
+}
+.img-width{
+  margin-top: 88px;
+    padding: 6px 14px;
+    border-radius: 20px;
+    background-color: #20205E;
+    color: white;
+    text-align: left;
+    display: inline-block;
+    font: normal normal  14px/20px Open Sans;
+}
+.inner-icon{
+  width:32px;
+}
+
+.know-more
+{
+  font-size: small;
+}
+ 
+ 
